# SPDX-License-Identifier: CC0-1.0

uvcgadget_public_headers = files([
  'configfs.h',
  'events.h',
  'libcamera-source.h',
  'list.h',
  'stream.h',
  'timer.h',
  'v4l2-source.h',
  'video-source.h',
  'mjpeg_encoder.hpp',
  ])


install_headers(uvcgadget_public_headers,
                subdir : 'uvcgadget')

includes = include_directories('.')
